infra/common/istio/request-authentication-keycloak.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: keycloak
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    # KeycloakサーバのURLを指定
    - issuer: "http://127.0.0.1:8080/realms/gihyo-ms"
      # JWTの公開鍵を取得するURI
      jwksUri: http://keycloak.keycloak.svc.cluster.local:8080/realms/gihyo-ms/protocol/openid-connect/certs
      fromHeaders:
        - name: Authorization
          prefix: "Bearer "
      forwardOriginalToken: true
